// Copyright 2017 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gitiles.messages;


// Child is last part and its sha1 tip.
message Child {
  string suffix = 1;
  bytes sha1 = 2;
}

// RefSpace is a bunch of children which share the same ref namespace (prefix).
message RefSpace {
  string prefix = 1;
  repeated Child children = 2;
}

// RepositoryState stores tips of all watched refs in a repo.
message RepositoryState {
  repeated RefSpace spaces = 1;
}
